crates/cli/tests/snapshots/project_templates_tests__changelog_content.snap
---
source: crates/cli/tests/project_templates_tests.rs
expression: "ProjectTemplates::changelog_content()"
---
# CHANGELOG

## Version 1.0.0
**2024-01-18**

- First release
