crates/cli/tests/snapshots/project_templates_tests__package_swift_without_plugin.snap
---
source: crates/cli/tests/project_templates_tests.rs
expression: "ProjectTemplates::package_swift_content(\"TestPkg\", \"iOS\", \"26\", false)"
---
// swift-tools-version: 6.2
// The swift-tools-version declares the minimum version of Swift required to build this package.

import PackageDescription

let package = Package(
    name: "TestPkg",
    platforms: [
        .iOS(.v26)
    ],
    products: [
        // Products define the executables and libraries a package produces, making them visible to other packages.
        .library(
            name: "TestPkg",
            targets: ["TestPkg"]
        ),
    ],
    targets: [
        // Targets are the basic building blocks of a package, defining a module or a test suite.
        // Targets can depend on other targets in this package and products from dependencies.
        .target(
            name: "TestPkg",
        ),
        .testTarget(
            name: "TestPkgTests",
            dependencies: ["TestPkg"]
        ),
    ]
)
