crates/cli/tests/snapshots/project_templates_tests__readme_content.snap
---
source: crates/cli/tests/project_templates_tests.rs
expression: "ProjectTemplates::readme_content(\"MyProject\")"
---
# MyProject
