crates/cli/tests/snapshots/project_templates_tests__xctest_content.snap
---
source: crates/cli/tests/project_templates_tests.rs
expression: "ProjectTemplates::test_content(\"MyLib\", \"XCTest\")"
---
import XCTest
@testable import MyLib

final class MyLibTests: XCTestCase {
    func testExample() throws {
        // XCTest Documentation
        // https://developer.apple.com/documentation/xctest

        // Defining Test Cases and Test Methods
        // https://developer.apple.com/documentation/xctest/defining_test_cases_and_test_methods
    }
}
